# learning_rust

./: .gitignore  README.md
basic_functions/src/: main.rs
data_types/: Cargo.toml
discord_bot/src/: main.rs
iterators_and_stuff/: Cargo.toml
mysql_test/: Cargo.toml
small_projects/invert_list/: Cargo.toml
small_projects/invert_list/src/: main.rs
small_projects/use_api/: Cargo.toml
small_projects/use_api/src/: main.rs
specific_things/arrays_vectors_slices/: Cargo.toml
specific_things/arrays_vectors_slices/src/: main.rs
specific_things/basic_functions/: Cargo.toml
specific_things/data_types/src/: main.rs
specific_things/discord_bot/: Cargo.toml
specific_things/enums/: Cargo.toml
specific_things/enums/src/: main.rs
specific_things/guessing_game/: Cargo.toml
specific_things/guessing_game/src/: main.rs
specific_things/iterators_and_stuff/src/: main.rs
specific_things/loops/: Cargo.toml
specific_things/loops/src/: main.rs
specific_things/matches/: Cargo.toml
specific_things/matches/src/: main.rs
specific_things/mysql_test/src/: main.rs
specific_things/strings/: Cargo.toml
specific_things/traits_and_stuff/: Cargo.toml
specific_things/traits_and_stuff/src/: main.rs
strings/src/: main.rs
testing/: Cargo.toml
testing/src/: main.rs
